--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
- 
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -13,13 +12,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.20.0",
     "js-cookie": "^2.2.1",
     "next": "^9.5.2",
     "next-pwa": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "tailwindcss": "^1.7.5"
+  },
+  "devDependencies": {
+    "postcss-preset-env": "^6.7.0"
   }
 }
